# swift-embedded-examples

./: .flake8  .gitignore  .spi.yml  .swift-format  .swift-version  .swiftformatignore  CODEOWNERS  Package.resolved  Package.swift  README.md
Documentation/: README.md
RPi4B-blink/: README.md  build.sh  link.ld
Tools/: elf2hex.py  macho2bin.py  macho2uf2.py  requirements.txt
arduino-esp32-led-blink-sdk/: README.md  wokwi.toml
arduino-esp32-wifi-scan-sdk/: README.md  sdkconfig.defaults
arduino-esp32-wifi-scan-sdk/main/: ArduinoString.swift  BridgingHeader.h  CMakeLists.txt  Kconfig.projbuild  Main.swift  idf_component.yml
esp32-ble-peripheral-sdk/: CMakeLists.txt  README.md
esp32-ble-peripheral-sdk/main/: ATTAttributePermissions.swift  ATTError.swift  BluetoothAddress.swift  BluetoothUUID.swift  BridgingHeader.h  ByteValue.swift  CMakeLists.txt  CompanyIdentifier.swift  Data.swift  Encoder.swift  Error.swift  GAPData.swift  GAPDataType.swift  GATTAttributes.swift  GATTCharacteristicProperties.swift  Led.swift  LedStrip.swift  LowEnergyAddressType.swift  Main.swift  NimBLE.swift  Peer.swift  PeripheralProtocol.swift  String.swift  System.swift  UInt128.swift  iBeacon.swift  idf_component.yml  linker.lf
esp32-ibeacon-sdk/: README.md  sdkconfig.defaults
esp32-led-blink-sdk/: CMakeLists.txt  README.md  diagram.json  wokwi.toml
esp32-led-blink-sdk/main/: BridgingHeader.h  CMakeLists.txt  Dummy.c  Led.swift  Main.swift
esp32-led-strip-sdk/: README.md  diagram.json
harmony/: ACKNOWLEDGEMENTS.md  BillOfMaterials.md  CMakeLists.txt  README.md
harmony/3DModels/: Assembly
harmony/Sources/Application/: BridgingHeader.h  Button.swift  ButtonTimes.swift  LEDStrip.swift  Logging.swift  Main.swift  QuadratureEncoder.swift  Stubs.swift
harmony/Sources/Audio/: AudioAnalyzer.swift  AudioBuffer.swift  AudioBufferTransport.swift  AudioEngine.swift  AudioI2S.swift  AudioPico.swift  MAX9744.swift  Resampler.swift  Ring.swift  RingBuffer.swift  SpinLock.swift  TPA2016D2.swift  Timer.swift
harmony/Sources/Bluetooth/: A2DP.swift  AVRCP.swift  HCI.swift  SBC.swift  SDP.swift
harmony/Sources/PIOPrograms/: I2S.pio  QuadratureEncoder.pio  WS2812.pio
harmony/Tests/AudioTests/: RingBufferTests.swift
nrfx-blink-sdk/: BridgingHeader.h  CMakeLists.txt  Main.swift  README.md  Stubs.c  prj.conf  west.yml
nuttx-riscv-blink/: CMakeLists.txt  README.md  defconfig
nuttx-riscv-blink/leds_swift/: BridgingHeader.h  Kconfig  Make.defs  Makefile  leds_swift.swift
pico-blink/: Package.swift  README.md  build.sh
pico-blink-sdk/: BridgingHeader.h  CMakeLists.txt  Main.swift  README.md  hacky_cmake_helper.cmake
pico-w-ble-peripheral-sdk/: BridgingHeader.h  CMakeLists.txt  CYW43.swift  GPIO.swift  Main.swift  PicoError.swift  README.md
pico-w-ble-peripheral-sdk/BTStack/: Error.swift  GAP.swift  GATTPeripheral.swift  GATTServerConnection.swift  HostController.swift  L2CAPServer.swift  Transport.swift
pico-w-ble-peripheral-sdk/Bluetooth/: Address.swift  BluetoothUUID.swift  ByteValue.swift  CompanyIdentifier.swift  Data.swift  DefinedUUIDExtension.swift  L2CAPSocket.swift  LowEnergyAdvertisingData.swift  SecurityLevel.swift  UInt128.swift  UInt24.swift  UInt256.swift  UInt40.swift  UInt48.swift  UInt512.swift  Unit.swift  UnitIdentifier.swift  iBeacon.swift
pico-w-ble-peripheral-sdk/Bluetooth/Extensions/: Hexadecimal.swift  Integer.swift  String.swift  System.swift  UUID.swift
pico-w-ble-peripheral-sdk/BluetoothGAP/: Decoder.swift  Encoder.swift  GAPCompleteLocalName.swift  GAPData.swift  GAPDataType.swift  GAPFlags.swift  GAPManufacturerSpecificData.swift  GAPShortLocalName.swift  iBeaconManufacturerData.swift
pico-w-ble-peripheral-sdk/BluetoothGATT/: ATTAttributePermissions.swift  ATTConnection.swift  ATTError.swift  ATTErrorResponse.swift  ATTExecuteWriteRequest.swift  ATTExecuteWriteResponse.swift  ATTFindByTypeRequest.swift  ATTFindByTypeResponse.swift  ATTFindInformationRequest.swift  ATTFindInformationResponse.swift  ATTHandleValueConfirmation.swift  ATTHandleValueIndication.swift  ATTHandleValueNotification.swift  ATTMaximumTransmissionUnit.swift  ATTMaximumTransmissionUnitRequest.swift  ATTMaximumTransmissionUnitResponse.swift  ATTOpcode.swift  ATTPrepareWriteRequest.swift  ATTPrepareWriteResponse.swift  ATTProtocolDataUnit.swift  ATTReadBlobRequest.swift  ATTReadBlobResponse.swift  ATTReadByGroupTypeRequest.swift  ATTReadByGroupTypeResponse.swift  ATTReadByTypeRequest.swift  ATTReadByTypeResponse.swift  ATTReadMultipleRequest.swift  ATTReadMultipleResponse.swift  ATTReadRequest.swift  ATTReadResponse.swift  ATTSignedWriteCommand.swift  ATTWriteCommand.swift  ATTWriteRequest.swift  ATTWriteResponse.swift  GATTCharacteristicProperties.swift  GATTClientCharacteristicConfiguration.swift  GATTDatabase.swift  GATTDescriptor.swift  GATTServer.swift  GATTUserDescription.swift
pico-w-ble-peripheral-sdk/BluetoothHCI/: ChannelIdentifier.swift  HCIError.swift
pico-w-ble-peripheral-sdk/GATT/: Peer.swift  PeripheralProtocol.swift
pico-w-blink-sdk/: BridgingHeader.h  CMakeLists.txt  Main.swift  README.md
pico-w-btspeaker/: BridgingHeader.h  CDemoImpl.c  CMakeLists.txt  Main.swift  README.md  Stubs.c
pico-w-btspeaker/include/: lwipopts.h
pico-w-ibeacon-sdk/: Bluetooth.swift  BluetoothAddress.swift  BridgingHeader.h  CMakeLists.txt  CYW43.swift  Data.swift  GAPManufacturerSpecificData.swift  GPIO.swift  Integer.swift  Main.swift  README.md  UUID.swift
pico-w-ibeacon-sdk/include/: lwipopts.h
pico2-neopixel/: Makefile  Package.resolved  Package.swift  README.md
rpi-4b-blink/: Makefile  Package.resolved  Package.swift  README.md
rpi-5-blink/: Makefile  Package.resolved  Package.swift  README.md
rpi-pico-blink/: Makefile  Package.swift  README.md
rpi-pico-blink-sdk/: Main.swift  README.md
rpi-pico2-neopixel/: Package.resolved  Package.swift  README.md
rpi-picow-blink-sdk/: BridgingHeader.h  CMakeLists.txt  README.md
rpi4b-blink/: Makefile  Package.swift  README.md  build.sh
rpi5-blink/: Makefile  Package.resolved  Package.swift  README.md  kernel8.elf  (+1 more)
(+305 files in other folders)
